syntax = "proto3";

package com.harborx.mongo.test.v3;

enum MyEnumV3 {
  UNKNOWN = 0;
  V1 = 1;
  V2 = 2;
};

message MyTestV3 {
  string hello = 1;
  int32 foobar = 2;
  int64 bazinga = 3;
  repeated string primitive_sequence = 4;
  repeated MyTestV3 rep_message = 5;
  MyTestV3 opt_message = 6;

  map<string, int32> string_to_int32 = 7;
  map<int32, MyTestV3> int_to_mytest = 8;
  repeated MyEnumV3 rep_enum = 9;
  MyEnumV3 opt_enum = 10;
  map<int32, MyEnumV3> int_to_enum = 11;
  map<bool, string> bool_to_string = 12;
  map<string, bool> string_to_bool = 13;
  bytes opt_bs = 14;
  bool opt_bool = 15;

  oneof trick_or_treat {
    int32 trick = 16;
    MyTestV3 treat = 17;
  }

  map<fixed64, bytes> fixed64_to_bytes = 18;
  double opt_double = 20;
  float opt_float = 21;
};
